# cationbot

./: .coveragerc  .editorconfig  .env.example  .gitignore  DEPLOY.md  LICENSE  Procfile  README.md  pyproject.toml  requirements.txt
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  deploy.yml
cationbot/: __main__.py
cationbot/cogs/: auto_member.py  auto_role.py  suggestions.py
cationbot/controllers/: auto_custom_role.py  auto_member_role.py  auto_role.py
cationbot/core/: __init__.py  activities.py  bot.py  env.py  roles.py  settings.py
cationbot/helpers/: reactions.py  roles.py
cationbot/manager/: __init__.py  message.py  reaction.py  role.py
cationbot/models/: __init__.py  reactions.py  roles.py
scripts/: quality.sh  tests.html.sh  tests.sh
tests/: conftest.py
tests/cogs/: test_auto_member.py  test_auto_role.py  test_suggestions.py
tests/controllers/: test__auto_custom_role.py  test__auto_member_role.py  test_auto_role.py
tests/helpers/: test_reactions.py  test_roles.py
tests/manager/: test__message__get_message_from_channel.py  test__reaction__get_member_from_reaction_event.py  test__reaction__is_reaction_event_on_message.py  test__role__add_role_to_member.py  test__role__member_has_role.py  test__role__remove_role_from_member.py
tests/models/: test_reactions.py  test_roles.py
