[tool.poetry]
name = "cationbot"
version = "1.1.0"
description = "A Bot to manage our server on Discord."
authors = ["Renan Gomes <renan.gomes@live.com>"]
license = "MIT"
repository = "https://github.com/CationHQ/cationbot"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.pytest.ini_options]
minversion = "6.2.4"
addopts = "-s -rf"
testpaths = ["tests"]

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = "^1.7.2"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}

[tool.poetry.dev-dependencies]
isort = "^5.8.0"
black = "^20.8b1"
pytest = "^6.2.4"
pytest-mock = "^3.6.1"
pytest-cov = "^2.12.1"
Faker = "^6.6.3"
coverage = "^5.5"
pytest-asyncio = "^0.14.0"
autoflake = "^1.4"
pylama = "^7.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
